[package]
name = "aditus"
version = "0.0.1"
edition = "2021"
authors = ["Silen Locatelli"]
license = "MIT"
description = "An easy way to get access tokens from OAuth Providers"
repository = "https://github.com/SilenLoc/aditus"

[dependencies]
clap = { version = "4.4.8", features = ["derive", "unstable-doc", "env"] }
ureq = { version = "2.8.0", features = ["json", "charset"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
colored = "2.1.0"